Your Items autocomplete supports lists

--- a/app/stylesheets/closet_hangers/_index.sass
+++ b/app/stylesheets/closet_hangers/_index.sass
@@ -177,6 +177,10 @@ body.closet_hangers-index
     &:last-child
       border-bottom: 0
 
+  .closet-list-autocomplete-item a
+    font-size: 85%
+    padding-left: 2em
+
   &.current-user
     #closet-hangers
       .object:hover
