bug fix for floats on closet_lists#edit

--- a/app/stylesheets/closet_lists/_form.sass
+++ b/app/stylesheets/closet_lists/_form.sass
@@ -2,6 +2,7 @@ body.closet_lists-new, body.closet_lists-create, body.closet_lists-edit, body.cl
   +secondary-nav
 
   form ul.fields
+    clear: both
     list-style: none
 
     label
